# beforedoctor4

./: .cursorrules-Notused  .flutter-plugins-dependencies 2  .flutter-plugins-dependencies 3  .flutter-plugins-dependencies 4  .gitignore  AGGRESSIVE_FIX.sh  AUDIO_STREAMING_VERIFICATION.sh  BUILD_WITH_ERROR_DETAILS.sh  CHECK_APP_STATUS.sh  COMPLETE_REBUILD.sh  DEPLOY_PRODUCTION.sh  DIAGNOSE_GATEWAY_ERRORS.sh  FINAL_FIX.sh  FIX_ALL_ISSUES.sh  FIX_KEYCHAIN_ACCESS.sh  FIX_PERMISSIONS_NOW.sh  FIX_RUBY_AND_INSTALL.sh  FIX_XCODE_AND_RUN.sh  GET_WIFI_IP.sh  INSTALL_NODE_AND_GATEWAY.sh  REVIEW_PACKAGE_SUMMARY.txt  RUN_APP_FINAL.sh  RUN_NOW.sh  RUN_ON_PHONE.sh  START_GATEWAY.sh  START_GATEWAY_EASY.sh  UPDATE_GATEWAY_ENV.sh  analysis_options.yaml  capture_flutter_logs.sh  check_developer_mode.sh  check_status.sh  configure_and_run.sh  configure_signing_cli.sh  dev.sh  fix_and_run.sh  fix_signing.sh  flutter_log.txt  get_team_id.sh  install_all.sh  install_dependencies.sh  (+19 more)
FIREBASE_TOKEN_FIX_FILES/: auth.js
ai-website-supabase-backend/: .env.example  package.json
android/: settings.gradle.kts
audio-agent/: .env.example  .env.supabase.example  .gitignore  app.ts  docker-compose.yml  eslint.config.js  package-lock.json  package.json  prettier.config.cjs  server.ts  tsconfig.json
audio-agent/workers/asr/: pyproject.toml
audio-agent/workers/asr/asr_worker/: app.py  service.py
audio-agent/workers/asr/asr_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gateway/: .dockerignore  .env.backup  .env.example  .gitignore  Dockerfile  START_SERVER.sh  auth.js  (+22 more)
(+195 files in other folders)
