[project]
name = "asr-worker"
version = "0.1.0"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "numpy>=1.26.0",
  "soundfile>=0.12.1",
  "transformers>=4.46.0",
  "torch>=2.3.0",
  "accelerate>=0.34.0"
]
requires-python = ">=3.10"

[tool.uvicorn]
factory = false
